--- a/config/mer.yaml
+++ b/config/mer.yaml
@@ -5,7 +5,7 @@
 mer: False
 
 # Learning rate for MER
-mer_lr: 1e-4
+mer_lr: 0.0001
 
 # Gamma Learning rate parameter
 mer_gamma: 0.03
@@ -18,3 +18,11 @@ mer_replay_buffer_size: 5000
 
 # Markov chain terminates when chain horizon is reached
 mer_update_target_every: 50
+
+#################################################################################
+# NON-STATIONARITY
+#################################################################################
+change_task: False
+change_every: 10000
+
+env_name: Pendulum-v0
