--- a/config/catcher.yaml
+++ b/config/catcher.yaml
@@ -1,5 +1,5 @@
 #################################################################################
-# MetaWorld Parameters
+# Catcher Parameters
 #################################################################################
 
 env_name: Catcher
@@ -7,13 +7,13 @@ lr: 0.0001
 batch_size: 128
 exp_name: SOC_changing_task_1
 model_type: SOC
-task_name: "window-close-v2"
-test_task_name: "window-open-v2"
+task_name: 0.0095
+test_task_name: 0.0095
 seed: 1
 alpha: 0.005
-change_task: True
+change_task: False
 change_every: 25000
-buffer_size: 1.0
+buffer_size: 100.0
 update_after: 200
 load_model: False
 visualize: False
