--- a/config/cartpole.yaml
+++ b/config/cartpole.yaml
@@ -5,7 +5,7 @@
 env_name: CartPole-v1
 lr: 0.001
 batch_size: 100
-exp_name: SAC_discrete_1
+exp_name: SAC_cartpole_1
 model_type: SAC
 task_name: CartPole-v1
 test_task_name: CartPole-v1
@@ -18,5 +18,5 @@ update_after: 1000
 eps_decay: 1
 load_model: False
 visualize: False
-option_dim: 4
-option_num: 4
+option_dim: 2
+option_num: 2
