--- a/config/continous_soc.yaml
+++ b/config/continous_soc.yaml
@@ -5,7 +5,7 @@
 env_name: Pendulum-v0
 lr: 0.001
 batch_size: 100
-exp_name: SOC_continous_1
+exp_name: SOC_pendulum_1
 model_type: SOC
 task_name: Pendulum-v0
 test_task_name: Pendulum-v0
