--- a/config/cartpole.yaml
+++ b/config/cartpole.yaml
@@ -5,15 +5,14 @@
 env_name: CartPole-v1
 lr: 0.001
 batch_size: 100
-exp_name: SAC_cartpole_1
-model_type: SAC
+exp_name: SOC_cartpole_1
+model_type: SOC
 task_name: CartPole-v1
 test_task_name: CartPole-v1
 seed: 1
 alpha: 0.05
 eps_min: 0.0
-change_every: 25000
-buffer_size: 100.0
+buffer_size: 1000000
 update_after: 1000
 eps_decay: 1
 load_model: False
