--- a/config/taxi.yaml
+++ b/config/taxi.yaml
@@ -12,8 +12,7 @@ test_task_name: MyTaxi-v1
 seed: 1
 alpha: 0.05
 eps_min: 0.0
-change_every: 25000
-buffer_size: 100.0
+buffer_size: 1000000
 update_after: 1000
 eps_decay: 1
 load_model: False
