--- a/config/taxi.yaml
+++ b/config/taxi.yaml
@@ -2,13 +2,13 @@
 # Catcher Parameters
 #################################################################################
 
-env_name: Taxi-v3
+env_name: MovementBandits-v0
 lr: 0.001
 batch_size: 100
 exp_name: SOC_taxi_1
 model_type: SOC
-task_name: Taxi-v3
-test_task_name: Taxi-v3
+task_name: MovementBandits-v0
+test_task_name: MovementBandits-v0
 seed: 1
 alpha: 0.05
 eps_min: 0.0
@@ -20,4 +20,4 @@ visualize: False
 option_dim: 2
 option_num: 2
 
-num_tasks: 12
+num_tasks: 2
